Fix des alignements CSS

--- a/styles/champs.css
+++ b/styles/champs.css
@@ -4,24 +4,28 @@
     flex-wrap: wrap;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: 10px;
+    gap: 15px;
     margin: 20px 0;
 }
 
 .div-champs label {
+    display: flex;
+    align-items: center;
+    margin-right: 5px;
+    padding-left: 10px;
     font-family: Arial, sans-serif;
     font-size: 14px;
     color: #333;
-    margin-right: 5px;
 }
 
 .div-champs input {
+    height: max-content;
     padding: 5px 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    color: #333;
     font-size: 14px;
     font-family: Arial, sans-serif;
-    color: #333;
 }
 
 .div-champs input[type="number"] {
@@ -38,9 +42,12 @@
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
 
-.div-champs label,
-.div-champs input {
-    margin-bottom: 5px;
+.div-champs > div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
 }
 
 @media (max-width: 600px) {
